translationworkflow: fixed a syntax error in a strings file

--- a/woost/extensions/translationworkflow/path.strings
+++ b/woost/extensions/translationworkflow/path.strings
@@ -3,7 +3,7 @@
 from cocktail.translations import translate_locale
 @end
 
-[woost.extensions.translationworkflow.translation_path(source_language, target_language, **kwargs]
+[woost.extensions.translationworkflow.translation_path(source_language, target_language, **kwargs)]
 ca:
     ${ca_possessive(translate_locale(source_language).lower())}
     a
