Fixed a typo in the presentation.images group of the Configuration model

--- a/woost/models/configuration.strings
+++ b/woost/models/configuration.strings
@@ -46,7 +46,7 @@ en: Configuration
 
             [images]
             ca: Imatges
-            es: Imagenes
+            es: Imágenes
             en: Images
 
             [video]
