--- a/woost/models/configuration.strings
+++ b/woost/models/configuration.strings
@@ -44,6 +44,11 @@ en: Configuration
         es: Presentación
         en: Presentation
 
+            [appearence]
+            ca: Aparença
+            es: Apariencia
+            en: Appearence
+
             [images]
             ca: Imatges
             es: Imágenes
@@ -95,6 +100,21 @@ en: Configuration
         ca: Tema visual
         es: Tema visual
         en: Visual theme
+
+        [default_page_template]
+        ca: Plantilla de pàgina per defecte
+        es: Plantilla de página por defecto
+        en: Default page template
+
+        [default_news_template]
+        ca: Plantilla de notícia per defecte
+        es: Plantilla de noticia por defecto
+        en: Default news template
+
+        [default_event_template]
+        ca: Plantilla d'esdeveniment per defecte
+        es: Plantilla de evento por defecto
+        en: Default event template
 
         [login_page]
         ca: Pàgina d'autenticació
