Another image alignment translation fix

--- a/woost/models/rendering/imageeffects.strings
+++ b/woost/models/rendering/imageeffects.strings
@@ -41,7 +41,7 @@
         es: Centrado
         en: Center
 
-        [right]
+        [bottom]
         ca: A baix
         es: Abajo
         en: Bottom
