Internal refactoring of the user actions system.
The add_integral action was broken: it used a link to pass the desired type for
the new object on its query string. Since it didn't use a POST, unsaved form
data was not entered into the edit stack and was therefore lost.

To fix this, user actions can now receive parameters (such as said type, or the
relation they work uppon). This has caused many changes:

- The POST format for user actions changes; it can now include extra parameters
  and reference other form fields in the part that designates the selected
  targets
- All the logic to select and activate a user action based on the current
  request has been moved to BaseBackOfficeController. Removed specific logic in
  ContentController, EditController, EditBlocksController, ChangeLogController
  and ItemFieldsController.
- Changes to the ActionBar class:
  - Removed the 'action_parameter' property
  - Removed the 'submit_action_target' property
  - Added the 'selection_field' property
  - Added the 'relation' property
  - Added the 'hide_disabled_actions' property
- Changes to the UserAction class:
  - Changed the signature of get_errors()
  - Changed the signature of invoke()
  - Added the get_parameters_schema() method
  - Added the get_parameter_members() method
  - get_dropdown_panel() now receives a reference to an ActionBar instead of the
    action's target
- New actions and abstract base classes:
  - CreateAction
  - SelectRelatedObjectAction
  - RelateNewIntegralObjectAction
  - AddNewAction (replaces AddIntegralAction)
  - PickAction
  - PickNewAction
  - UnlinkAction
- Reimplemented ItemSelector as CML template, use an ActionBar instead of a
  custom set of buttons
- The dropdown menu for the new and add_new (the old add_integral) actions is
  now defined by the get_dropdown_panel() of their CreateAction base class.
  Until now it was replicated in several places.

--- a/woost/controllers/backoffice/useractions.strings
+++ b/woost/controllers/backoffice/useractions.strings
@@ -1,7 +1,7 @@
 @init
 def describe_selection_error_limit(error, min_label, max_label, singular, plural):
 
-    if instance.action.min and instance.selection_size < instance.action.min:
+    if error.action.min and error.selection_size < error.action.min:
         label = min_label
         limit = error.action.min
     else:
@@ -73,7 +73,17 @@ def describe_selection_error_limit(error, min_label, max_label, singular, plural
         es: a
         en: a
 
-    [add_integral]
+    [pick]
+    ca: Llistar
+    es: Listar
+    en: Browse
+
+    [pick_new]
+    ca: Nou
+    es: Nuevo
+    en: New
+
+    [add_new]
     ca: Afegir
     es: Añadir
     en: Add
@@ -82,6 +92,11 @@ def describe_selection_error_limit(error, min_label, max_label, singular, plural
         ca: a
         es: a
         en: a
+
+    [unlink]
+    ca: Desvincular
+    es: Desvincular
+    en: Unlink
 
     [remove]
     ca: Treure
@@ -307,7 +322,7 @@ def describe_selection_error_limit(error, min_label, max_label, singular, plural
         el ${describe_selection_error_limit(error, u"mínim", u"màxim", "és d'1 element", "és de %d elements")}.
     es:
         No se puede aplicar la acción <em>${translations(error.action).lower()}</em>
-        a una selección de ${plural2(error.selection_size, u"un solo elemento", "de %d elementos")};
+        a una selección de ${plural2(error.selection_size, u"un solo elemento", "%d elementos")};
         el ${describe_selection_error_limit(error, u"mínimo", u"máximo", "es de 1 elemento", "es de %d elementos")}.
     en:
         Can't apply action <em>${translations(error.action).lower()}</em>
