attributes: fixed translations broken by pacman

--- a/woost/extensions/attributes/attribute.strings
+++ b/woost/extensions/attributes/attribute.strings
@@ -1,5 +1,5 @@
 
-[woost.extensions.attributes.Attribute]
+[woost.extensions.attributes.attribute.Attribute]
 ca: Atribut
 es: Atributo
 en: Attribute
@@ -48,29 +48,29 @@ en: Attribute
                 es: Solo enlaces
                 en: References only
 
-                [attribute_name]
-                ca: Nom de l'atribut
-                es: Nombre del atributo
-                en: Attribute name
+        [attribute_name]
+        ca: Nom de l'atribut
+        es: Nombre del atributo
+        en: Attribute name
 
-                [explanation]
-                ca:
-                    El nom de l'atribut HTML que es generarà. Hauria de començar
-                    per <code>data-</code> i constar només de lletres en minúscula,
-                    números i guions. Es recomana utilitzar un sistema de prefixos.
-                    Exemples: <code>data-woost-user</code>,
-                    <code>data-myproject-myattribute</code>.
-                es:
-                    El nombre del atributo HTML se generará. Debería empezar por
-                    <code>data-</code> y constar únicamente de letras en minúscula,
-                    números y guiones. Se recomienda utilizar un sistema de prefijos.
-                    Ejemplos: <code>data-woost-user</code>,
-                    <code>data-myproject-myattribute</code>.
-                en:
-                    The name of the HTML attribute to generate. Should start with
-                    <code>data-</code> and contain only lowercase letters, numbers and
-                    dashes. Examples: <code>data-woost-user</code>,
-                    <code>data-myproject-myattribute</code>.
+            [explanation]
+            ca:
+                El nom de l'atribut HTML que es generarà. Hauria de començar
+                per <code>data-</code> i constar només de lletres en minúscula,
+                números i guions. Es recomana utilitzar un sistema de prefixos.
+                Exemples: <code>data-woost-user</code>,
+                <code>data-myproject-myattribute</code>.
+            es:
+                El nombre del atributo HTML se generará. Debería empezar por
+                <code>data-</code> y constar únicamente de letras en minúscula,
+                números y guiones. Se recomienda utilizar un sistema de prefijos.
+                Ejemplos: <code>data-woost-user</code>,
+                <code>data-myproject-myattribute</code>.
+            en:
+                The name of the HTML attribute to generate. Should start with
+                <code>data-</code> and contain only lowercase letters, numbers and
+                dashes. Examples: <code>data-woost-user</code>,
+                <code>data-myproject-myattribute</code>.
 
         [code]
         ca: Valor
