--- a/woost/models/document.strings
+++ b/woost/models/document.strings
@@ -83,6 +83,11 @@ en: Document
             es: Dejar en blanco para utilizar la plantilla por defecto.
             en: Leave blank to use the default template.
 
+        [styles]
+        ca: Estils
+        es: Estilos
+        en: Styles
+
         [children]
         ca: Pàgines filles
         es: Páginas hijas
