Enable blocks to customize the HTML for their heading.
- Added the Block.custom_heading member
- Added the "custom" option for the Block.heading_display member
- Added the Block.get_heading() method

--- a/woost/models/block.strings
+++ b/woost/models/block.strings
@@ -38,6 +38,11 @@ en: Block
         es: Título
         en: Title
 
+        [custom_heading]
+        ca: Encapçalament personalitzat
+        es: Encabezado personalizado
+        en: Custom heading
+
         [heading_display]
         ca: Encapçalament
         es: Encabezado
@@ -59,6 +64,11 @@ en: Block
                 ca: Visible
                 es: Visible
                 en: Visible
+
+                [custom]
+                ca: Personalitzat
+                es: Personalizado
+                en: Custom
 
         [heading_type]
         ca: Tipus d'encapçalament
