Changes to Document.inner_title
- Now supports HTML
- Changed its visible name, to align it with Block.custom_heading
- BaseView.get_main_title() now ignores it
- Add a with_custom_heading CSS class to StandardView if the active document
  defines inner_title

--- a/woost/models/document.strings
+++ b/woost/models/document.strings
@@ -34,9 +34,9 @@ en: Document
         en: Title
 
         [inner_title]
-        ca: Títol interior
-        es: Título interior
-        en: Inner title
+        ca: Encapçalament personalitzat
+        es: Encabezado personalizado
+        en: Custom heading
 
         [custom_document_title]
         ca: Títol personalitzat
