campaign3: fixed the translations file for CampaignMonitorList

--- a/woost/extensions/campaign3/campaignmonitorlist.strings
+++ b/woost/extensions/campaign3/campaignmonitorlist.strings
@@ -1,5 +1,5 @@
 
-[woost.extensions.campaign3.CampaignMonitorList]
+[woost.extensions.campaign3.campaignmonitorlist.CampaignMonitorList]
 ca: Llista de subscripció
 es: Lista de suscripción
 en: Subscription list
