forms extension: Added the OptionFieldOption.enabled member.
This makes it possible to remove options from a closed set field without
affecting the requests that may have selected it and been already stored.

--- a/woost/extensions/forms/fields.strings
+++ b/woost/extensions/forms/fields.strings
@@ -305,6 +305,11 @@ def field_property(member, *properties):
             es: Nombre
             en: Name
 
+            [enabled]
+            ca: Activa
+            es: Activa
+            en: Enabled
+
     [EmailAddressField]
     ca: Camp d'adreça de correu electrònic
     es: Campo de dirección de correo electrónico
