ecommerce: complete refactoring of billing calculations.
The changes make it possible to new which effects

- Introduced the 'bill' module
- Removed ECommerceOrder.calculate_cost(), use the OrderBill class instead
- Changed the signature of ECommerceBillingConcept.applies_to()
- Changed the signature of ECommerceBillingConcept.apply()
- Changed the data supplied to custom implementations of ECommerceBillingConcept
- Changed how multiple percentage based concepts on a single section of the bill (pricing / shipping / taxes) are combined
- Multiple changes to BasketView

--- a/woost/extensions/ecommerce/basketview.strings
+++ b/woost/extensions/ecommerce/basketview.strings
@@ -50,6 +50,13 @@
 	fr: Taux
     pt: Impostos
 
+    [subtotal]
+    ca: Subtotal
+    es: Subtotal
+    en: Subtotal
+    fr: Sous-total
+    pt: Subtotal
+
     [order_schema]
 
         [members]
@@ -76,11 +83,7 @@
             pt: Preço
 
             [subtotal]
-            ca: Subtotal
-            es: Subtotal
-            en: Subtotal
-            fr: Sous-total
-            pt: Subtotal
+            @reuse "woost.extensions.ecommerce.BasketView.subtotal"
 
             [taxes]
             ca: Taxes
