ecommerce: make it possible to customize the label shown on the basket for a billing concept.
Added the get_title() method and the custom_title member to the ECommerceBillingConcept
model.

--- a/woost/extensions/ecommerce/ecommercebillingconcept.strings
+++ b/woost/extensions/ecommerce/ecommercebillingconcept.strings
@@ -93,3 +93,8 @@ fr: Concept de facturation
         en: Value
         fr: Valeur
 
+        [custom_title]
+        ca: Títol personalitzat
+        es: Título personalizado
+        en: Custom title
+
